--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -56,7 +56,7 @@ $\bullet$ L'Interface Repository, che è un sistema simile ad un name server, do
 possono ritrovare appunto le interfacce dei servizi disponibili.
 $\bullet$ Vi sono quindi dei sistemi per richiamare i servizi in maniera statica e
 dinamica
-$\bullet$ E inne vi sono degli appositi protocolli per la comunicazione ed integrazione fra ORB diversi.
+$\bullet$ E infine vi sono degli appositi protocolli per la comunicazione ed integrazione fra ORB diversi.
 \subsection{L'ORB}
 L'ORB è il cuore del sistema, per comunicare si usa sempre l'ORB. Si potrebbe
 quindi pensare che è un collo di bottiglia, ma in realtà la comunicazione presente
