--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -121,7 +121,7 @@ più servizi. La prima informazione che si necessita è la possibilità di descr
 le aziende che forniscono i servizi, per permettere quindi ad un generico utente
 di poter navigare.
 Con UDDI si può infatti realizzare facilmente un sistema di pagine bianche
-(name server normale), pagine gialle (ovvero un sistema di trading, si memorizza per categorie) o inne per pagine verdi
+(name server normale), pagine gialle (ovvero un sistema di trading, si memorizza per categorie) o infine per pagine verdi
 (sono pagine tecniche aggiuntive
 sui servizi oerti). Fondamentalmente, UDDI è un {`}name server d'alto livello',
 globale e condiviso ma non gerarchizzato. Questo aspetto presenta grossi problemi di coordinazione e di sicurezza fra i
