--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -297,30 +297,21 @@ Spesso, il tempo di vita di un oggetto è un qualcosa di molto complesso. Vi son
 per valutarne il tempo d'esistenza (sfruttando passivation, lease, reference counting...).
 \subsection{I servizi addizionali}
 Si tratta di servizi che possono aiutare l'utente ad esprimere determinate operazioni. I servizi infatti possono
-dipendere dal contesto utilizzato, la sessione, o
-da una serie di eventi che si sono venuti a verificare.
-In particolare, l'Invocation Context è molto utile: in generale, infatti, i mw
-vengono sviluppati in maniera tale che l'utente non sia costretto a specificare
-nelle sue operazioni parametri di supporto, ma solo quelli necessari per la business logic. Però può capitare che in
-certi casi questi parametri siano proprio
-necessari per l'operazione (tipo per realizzare delle transazioni sicure): questo
-pattern si preoccupa di recuperare le informazioni aggiuntive, che formano il
-contesto, e vengono aggiunte alla richiesta mediante un proxy. Si va quindi
-oltre il C/S primitivo, introducendo una separazione dei compiti (client prepara
-la richiesta, proxy aggiunge informazioni di contesto necessarie).
-60
-La sessione è un altro pattern per poter fornire un supporto al servitore:
-si utilizza per mantenere la specifica dell'oggetto remoto, permettendo così di
-\i{}
-creare un thin client.
-Un altro pattern inne è il call-chain interception: vi sono diversi gestori
-di supporto, i quali possono essere inseriti prima dell'invocazione (quindi, a
-differenza dell'invocation context, sono dal lato del server), per poter eseguire
-dei compiti specifici (per es: in base al tipo della richiesta, decidono il formato
-dei dati per la risposta). Questi intercettori possono anche bloccare l'invoke no
-a quando non hanno terminato il loro compito, creando appunto una catena di
-responsabilità. Si possono anche combinare (caso tipico: encrypt/decrypt di
-messaggi, introducendo quindi anche catene sul client!).
+dipendere dal contesto utilizzato, la sessione, o da una serie di eventi che si sono venuti a verificare.
+In particolare, l'\textit{Invocation Context} è molto utile: in generale, infatti, i mw vengono sviluppati in maniera
+tale che l'utente non sia costretto a specificare nelle sue operazioni parametri di supporto, ma solo quelli necessari
+per la business logic. Però può capitare che in certi casi questi parametri siano proprio necessari per l'operazione
+(tipo per realizzare delle transazioni sicure): questo pattern si preoccupa di recuperare le informazioni aggiuntive,
+che formano il contesto, e vengono aggiunte alla richiesta mediante un proxy. Si va quindi oltre il C/S primitivo,
+introducendo una separazione dei compiti (client prepara la richiesta, proxy aggiunge informazioni di contesto
+necessarie). La sessione è un altro pattern per poter fornire un supporto al servitore: si utilizza per mantenere la
+specifica dell'oggetto remoto, permettendo così di creare un thin client.
+Un altro pattern infine è il \textit{call-chain interception}: vi sono diversi gestori di supporto, i quali possono
+essere inseriti prima dell'invocazione (quindi, a differenza dell'invocation context, sono dal lato del server), per
+poter eseguire dei compiti specifici (per es: in base al tipo della richiesta, decidono il formato dei dati per la
+risposta). Questi intercettori possono anche bloccare l'invoke fino a quando non hanno terminato il loro compito,
+creando appunto una catena di responsabilità. Si possono anche combinare (caso tipico: encrypt/decrypt di messaggi,
+introducendo quindi anche catene sul client!).
 \subsection{Servizi per la QoS}
 Tutti i mw dispongono di servizi per fornire QoS, tranne i MOM. Anche qui, si
 possono riscontrare pattern che si ripetono:
