--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -196,7 +196,7 @@ concetti già visti in OLE, come la in-place activation, per cui un gestore vien
 attivato solo se è necessario, cioè se è richiesto da un sottocomponente. DCOM
 e e
 introduce anche altre tecnologie, come lo structured storage (tutto è all'interno
-di un singolo le) e un sistema di scambio dei dati unicato. DCOM introduce
+di un singolo le) e un sistema di scambio dei dati unificato. DCOM introduce
 soprattutto diversi strumenti proprietari Microsoft per il web, spesso incompatibili con altri strumenti.
 Per introdurre la dinamicità, un oggetto deve implementare anche l'interfaca
 cia IDispatch, che è riflessiva, la base stessa di automation. Infatti, a differenza
