--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -315,7 +315,7 @@ introducendo quindi anche catene sul client!).
 \subsection{Servizi per la QoS}
 Tutti i mw dispongono di servizi per fornire QoS, tranne i MOM. Anche qui, si
 possono riscontrare pattern che si ripetono:
-$\bullet$ Broker : si tratta di un gestore unicato per le connessioni. Viene quindi
+$\bullet$ Broker : si tratta di un gestore unificato per le connessioni. Viene quindi
 utilizzato per impedire che tutti i server utilizzino le risorse inutilmente,
 `
 per esempio. E quindi un front end, in grado di ricevere le richieste dal
