--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -32,7 +32,7 @@ ordinato, e presenta anche delle varianti. Infatti, oltre al normale servizio
 di nomi (per cui si deve conoscere il nome logico del servizio) vi è anche la
 possibilità di definire un servizio di trading, che funziona come le pagine
 gialle, ricercando servizi e non nomi!
-$\bullet$ Event e notication: sono sistemi meno orientati agli oggetti, ma che
+$\bullet$ Event e notification: sono sistemi meno orientati agli oggetti, ma che
 quindi aumentano le capacità del sistema! Infatti, oltre alla maniera sina
 crona/asincrona bloccante, in questo modo si possono introdurre sistemi
 molto più essibili.
@@ -414,5 +414,5 @@ quel momento comincia a ricevere gli eventi.
 Di solito, non è noto chi è che genera l'evento, è trasparente al consumatore.
 Gli eventi sono non persistenti, senza qualità, e senza possibilità di ltraggio: si
 ha che quindi la maniera più comoda per lavorare è il sistema push, e per avere
-QoS conviene utilizzare il notication service, che è in grado di fornire qualità
+QoS conviene utilizzare il notification service, che è in grado di fornire qualità
 e persistenza!
