--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -108,7 +108,7 @@ e facilmente estendibile.
 WSDL prevede diversi modi di interazione! Non solo più modi sincroni (con
 attesa di messaggio o sollecitazione da parte del client) ma anche asincroni (one-
 82
-way, o notication: cambia da chi esce il messaggio!).
+way, o notification: cambia da chi esce il messaggio!).
 WSDL è un linguaggio molto pesante, ma che garantisce un'alta flessibilità
 quindi: permette anche di invertire i ruoli fra C e S! Tuttavia, è fondamentale
 per poter generare in maniera automatica proxy e stub, oppure per realizzare
