--- a/RetiDiCalcolatoriM.tex
+++ b/RetiDiCalcolatoriM.tex
@@ -9,6 +9,7 @@
 \usepackage[italian]{babel}
 \usepackage{color}
 \usepackage{hyperref}
+\usepackage{amsmath}
 \title{Riassunto di studio per Reti di Calcolatori M}
 \author{Daniele Tiles \and Davide Bellettini (revisione)}
 \date{2007 - 2014}
