sso -> fisso, ssi -> fissi

--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -258,7 +258,7 @@ deve solo definire quali eventi sono interessanti per lui); uno è la sorgente d
 l'interfaccoa, l'altro il pozzo che la realizza. A sua volta, il container sfrutta
 degli oggetti intermedi per poter comunicare con l'oggetto contenuto.
 DCOM stabilisce anche la possibilità di realizzare una persistenza del coma
-ponente, implementando un'apposita interfaccia. (I riferimenti non son ssi in
+ponente, implementando un'apposita interfaccia. (I riferimenti non son fissi in
 DCOM).
 \subsection{Gestori delle sottoparti: i monikers}
 DCOM introduce i monikers come un sistema ad hoc, piuttosto complesso, per
