--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -78,7 +78,7 @@ almeno per fare monitoring (utilizzo di cluster per fare il controllo di una ris
 specifiche parti per controllare e correggere l'architettura, ma è necessario rispettare sempre il principio della minima
 intrusione: il rischio sarebbe che troppe risorse sono allocate solo per verificare che il sistema funzioni correttamente,
 riducendone l'efficienza! La replicazione è un costo che si va ad aggiungere al sistema: ma in generale si tratta di un
-costo sso, a fronte di possibili costi molto peggiori in caso di fallimento del sistema!
+costo fisso, a fronte di possibili costi molto peggiori in caso di fallimento del sistema!
 \subsection{Possibili guasti}
 I guasti si possono anche classificare in base alla loro riconoscibilità da un sistema (processore esterno):
 \begin{itemize}
