--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -247,206 +247,149 @@ operazione: è un modello con maggiore capacità espressiva. Restano comunque en
 poter essere implementati realmente. Aggiungendo vincoli e limitandoci quindi ad un'ipotesi di località, il progetto
 risulta più facilmente realizzabile.
 \subsection{Indicatori dell'efficienza}
-In generale, ci si limita alla complessità temporale, TP (N ), dove P è il numero
-di processori considerati: se è pari ad 1, siamo in un ambiente sequenziale.
-Un primo indicatore è lo speed-up, che indica l'incremento di prestazioni se si
-introducessero P processori:
-SP (N ) =
-T1 (N )
-$>$1
-TP (N )
-(1)
+In generale, ci si limita alla complessità temporale, $T_P(N)$, dove $P$ è il numero di processori considerati: se è
+pari ad 1, siamo in un ambiente sequenziale.
+Un primo indicatore è lo speed-up, che indica l'incremento di prestazioni se si introducessero P processori:
+\begin{equation}
+S_P(N) = \frac{T_1(N)}{T_P(N)} > 1
+\end{equation}
 Tuttavia, bisogna sempre tener presente che non tutti i programmi si possono
 parallelizzare: ciò dipende se vi sono troppe dipendenze fra le sotto parti.
 Un altro indicatore è l'efficienza nell'uso delle risorse:
-SP (N )
-P
-(2)
-T1 (N ) 1
-·
-TP (N ) P
-(3)
-EP (N ) =
+\begin{equation}
+ E_P(N) = \frac{S_P(N)}{P}
+\end{equation}
 Ma quindi, ciò corrisponde a dire:
-EP (N ) =
+\begin{equation}
+ E_P(N) = \frac{T_1(N)}{T_P(N)} \cdot \frac{1}{P}
+\end{equation}
 Possiamo quindi definire lo speed-up massimo:
-SP (N ) = P
-(4)
-EP (N ) = 1
-(5)
+\begin{equation}
+ max(S_P(N)) = P
+\end{equation}
 E l'efficienza massima:
-Sotto queste condizioni si avrebbe che tutti i processori lavorano al massimo,
-ovvero non abbiamo processori idle che possono risultare inutili. Questi sono
-coefficienti statistici, validi per tutto l'algoritmo. Quello che si può osservare è
-che la situazione ideale la si avrebbe se lo speed-up dipendesse in maniera lineare dal numero dei processori. Una
-soluzione ideale non interessante sarebbe
-se si distribuisse i compiti ai processi in maniera uguale (un programma totalmente parallelo!), raccogliendo solo alla
-ne il risultato. In realtà, i casi più
-interessanti sono quelli dove si presentano delle dipendenze, per cui necessariamente vi deve essere una parte
-sequenziale: questo caso presenta quindi una
-comunicazione intrinseca, indipendente dal deployment che si viene a realizzare.
-Si possono quindi studiare diversi casi basandosi sui fattori di interesse N e
-P . In particolare, si può definire come fattore di carico, o loading factor:
-N
-(6)
-P
-che definisce la complessità come viene suddivisa su ogni nodo. Vi possono
-essere diversi casi:
-L=
-13
-$\bullet$ N uguale a P : su ogni processore viene posta una parte molto semplice
-del problema. Si dice ipotesi di identità.
-$\bullet$ Dipendenza di N da P
-$\bullet$ Indipendenza, interessante al crescere di N
-La legge di Grosh stabilisce che la soluzione migliore risulta essere quella di lavorare sempre nel concentrato. . . Ma
-ciò non è sempre possibile! Se per esempio
-vi sono risorse limitate? Oppure, oltre un certo valore di N , non si riesce più
-a lavorare nel concentrato, e la legge è sicuramente inutile nel caso di vincoli,
-tipo la presenza di risorse distribuite.
-La legge di Amdhal stabilisce che vi è un limite alla possibile parallelize
-zazione, dato che ogni programma è costituito da una parte parallela e una
-parte sequenziale, e quest'ultima limita lo speed-up: si ha quindi che non cresce
-linearmente, ma tende a un valore asintotico! Nella situazione migliore immaginabile, con le risorse correttamente
-allocate, si ha quindi che si avrà uno speeda
-up sso, mentre sarà l'efficienza a variare a seconda dell'architettura del sistema!
-Come calcolare quindi lo speed-up massimo? Si vuole avere il numero di
-processori tali che si abbia la minore complessità del problema, realizzando un
-sistema fortemente caricato: si definite quindi l'heavily loaded limit:
-THL (N ) = infP (TP (N ))
-(7)
-Infatti, si lavora bene caricando molto ogni processore, i quali quindi lavorano
-per tutto il tempo necessario: abbiamo quindi in questomodo un buon uso delle
-risorse.
-Tuttavia, per la legge di Amdhal, dobbiamo ricordare che vi è anche una
-parte sequenziale in ogni programma. . . che è proprio la parte di comunicazione
-fra i diversi processori! Al crescere del numero dei processori, si ha quindi
-che lo speed-up diminuisce, allontanandosi dal valore massimo; questo degrado
-delle prestazioni è dovuto proprio al peso crescente della comunicazione fra i
-processori, che diventa fondamentale.
+\begin{equation}
+ max(E_P(N)) = 1
+\end{equation}
+Sotto queste condizioni si avrebbe che tutti i processori lavorano al massimo, ovvero non abbiamo processori idle che
+possono risultare inutili. Questi sono coefficienti statistici, validi per tutto l'algoritmo. Quello che si può
+osservare è che la situazione ideale la si avrebbe se lo speed-up dipendesse in maniera lineare dal numero dei
+processori. Una soluzione ideale non interessante sarebbe se si distribuisse i compiti ai processi in maniera uguale (un
+programma totalmente parallelo!), raccogliendo solo alla fine il risultato. In realtà, i casi più interessanti sono
+quelli dove si presentano delle dipendenze, per cui necessariamente vi deve essere una parte sequenziale: questo caso
+presenta quindi una comunicazione intrinseca, indipendente dal deployment che si viene a realizzare.
+Si possono quindi studiare diversi casi basandosi sui fattori di interesse $N$ e $P$. In particolare, si può definire
+come fattore di carico, o loading factor:
+\begin{equation}
+ L = \frac{N}{P}
+\end{equation}
+che definisce la complessità come viene suddivisa su ogni nodo. Vi possono essere diversi casi:
+\begin{itemize}
+ \item \textit{N uguale a P}: su ogni processore viene posta una parte molto semplice del problema. Si dice ipotesi 
+ di identità.
+ \item Dipendenza di N da P
+ \item Indipendenza, interessante al crescere di N
+\end{itemize}
+La legge di Grosh stabilisce che la soluzione migliore risulta essere quella di lavorare sempre nel concentrato... Ma
+ciò non è sempre possibile! Se per esempio vi sono risorse limitate? Oppure, oltre un certo valore di N, non si riesce
+più a lavorare nel concentrato, e la legge è sicuramente inutile nel caso di vincoli, tipo la presenza di risorse
+distribuite.
+La legge di Amdhal stabilisce che vi è un limite alla possibile parallelizzazione, dato che ogni programma è 
+costituito da una parte parallela e una parte sequenziale, e quest'ultima limita lo speed-up: si ha quindi che non
+cresce linearmente, ma tende a un valore asintotico! Nella situazione migliore immaginabile, con le risorse
+correttamente allocate, si ha quindi che si avrà uno speedup fisso, mentre sarà l'efficienza a variare a seconda
+dell'architettura del sistema!
+Come calcolare quindi lo speed-up massimo? Si vuole avere il numero di processori tali che si abbia la minore
+complessità del problema, realizzando un sistema fortemente caricato: si definite quindi l'heavily loaded limit:
+\begin{equation}
+ T_{HL} = \liminf_P{T_P(N)}
+\end{equation}
+Infatti, si lavora bene caricando molto ogni processore, i quali quindi lavorano per tutto il tempo necessario: 
+abbiamo quindi in questo modo un buon uso delle risorse.
+Tuttavia, per la legge di Amdhal, dobbiamo ricordare che vi è anche una parte sequenziale in ogni programma... che è
+proprio la parte di comunicazione fra i diversi processori! Al crescere del numero dei processori, si ha quindi
+che lo speed-up diminuisce, allontanandosi dal valore massimo; questo degrado delle prestazioni è dovuto proprio al 
+peso crescente della comunicazione fra i processori, che diventa fondamentale\footnote{per esempio se la parte
+sequenziale è $\frac{1}{5}$ del totale lo speedup massimo sarà il reciproco, ovvero 5}.
 \subsection{Caso di studio: somma di N numeri}
-Una possibile soluzione, imponendo la condizione d'identità, è quella di utilizzare
-a e
-un albero binario per fare la sommma: le radici sommano i numeri, che passano
-il risultato al padre, e così via. Supponendo quindi un albero con profondità H,
-\i{}
-possiamo osservare che N = 2H+1 e P = 2H+1 $-$ 1, per cui P è simile a N . Si
-ha che quindi:
-TP (N ) = O(H)
-= O(log2 (N ))
-= 2 · log2 (N )
-14
-Perché 2? Perché abbiamo 2 comunicazioni in ogni nodo. Possiamo quindi
-valutare l'efficienza di questa architettura:
-1
-log2 (N )
-EP (N ) = O
+Una possibile soluzione, imponendo la condizione d'identità, è quella di utilizzare un albero binario per fare la
+sommma: le radici sommano i numeri, che passano il risultato al padre, e così via. Supponendo quindi un albero con
+profondità H, possiamo osservare che $N = 2{H+1}$ e $P = 2^{H+1} - 1$, per cui P è simile a N . Si ha che quindi:
+\begin{align}
+T_P(N) &= O \left(H \right)              \nonumber \\
+       &= O \left(\log_2(N)\right)      \nonumber \\
+       &= 2 \cdot \log_2 \left(N\right)
+\end{align}
+Perché 2? Perché abbiamo 2 comunicazioni in ogni nodo. Possiamo quindi valutare l'efficienza di questa architettura:
+\begin{equation}
+ E_P \left( N \right) = O \left( \frac{1}{log_2\left(N\right)} \right)
+\end{equation}
 Ma quindi, al crescere di N, l'efficienza tende a 0! Per quanto riguarda lo speedup, si ha che non lavorano tutti i
-nodi,
-ovvero più si risale l'albero e meno i
-processori lavorano (il processore radice deve attendere, ovvero tempo di idle,
-che tutti gli altri abbiano finito!). Se invece avessimo un flusso di dati, i processori risulterebbero tutti sempre
-impegnati (potremmo risolvere un insieme di
-problemi).
-Come si possono quindi mantenere sempre impegnati i processori? Si deve
-incrementare il lavoro sul singolo processore, per cui:
-L=
-N
-$>$$>$ 1
-P
-(8)
-e quindi la complessità deve essere superiore al numero dei processori: su ogni
-nodo si ha quindi un certo numero di valori da sommare. Ciò si può ottenere
-per esempio con un albero sso, ovvero un numero di processori ssi. Infatti:
-TP (N ) = O (L + log2 (P ))
-I due componenti rappresentano rispettivamente il tempo di computazione e
-quello di comunicazione.
-SP (N ) =
-T1 (N )
-TP (N )
-=O
-=O
-N
-P
-N
-+ log2 (P )
-P
-P
-+
-1
-N · log2 (P )
+nodi, ovvero più si risale l'albero e meno i processori lavorano (il processore radice deve attendere, ovvero tempo 
+di idle, che tutti gli altri abbiano finito!). Se invece avessimo un flusso di dati, i processori risulterebbero 
+tutti sempre impegnati (potremmo risolvere un insieme di problemi).
+Come si possono quindi mantenere sempre impegnati i processori? Si deve incrementare il lavoro sul singolo processore,
+per cui:
+\begin{equation}
+ L = \frac{N}{P} \gg 1
+\end{equation}
+e quindi la complessità deve essere superiore al numero dei processori: su ogni nodo si ha quindi un certo numero di
+valori da sommare. Ciò si può ottenere per esempio con un albero fisso, ovvero un numero di processori fissi. Infatti:
+\begin{equation}
+ T_P\left(N\right) = O \left(L + \log_2 \left(P\right)\right)
+\end{equation}
+I due componenti rappresentano rispettivamente il tempo di computazione e quello di comunicazione.
+\begin{align}
+ S_P(N) &= \frac{T_1(N)}{T_P(N)} \nonumber \\
+        &= O \left( \frac{N}{\frac{N}{P} + \log_2(P)} \right) \nonumber \\
+        &= O \left( \frac{P}{1} + \frac{P}{N \cdot \log_2(P)} \right)
+\end{align}
 Per cui, lo speed-up tende effettivamente a P
-SP (N )
-P
-1
-1
-=O
-+
-1 N · log2 (P )
-EP (N ) =
-E l'efficienza tende ad 1. Quindi, caricando al massimo i processori ed usandoli
-correttamente, si ottiene speed-up ed efficienza massimi.
+\begin{align}
+ E_P(N) &= \frac{S_P(N)}{P} \nonumber \\
+        &= O \left(\frac{1}{1} + \frac{1}{N \cdot \log_2(P)}\right)
+\end{align}
+E l'efficienza tende ad 1. Quindi, caricando al massimo i processori ed usandoli correttamente, si ottiene speed-up 
+ed efficienza massimi.
 \subsection{Considerare l'I/O}
-In questi indicatori si è tuttavia lasciato da parte il problema dell'I/O, che
-spesos è il vero collo di bottiglia in diverse architetture. Inoltre, vi son diversi
-15
-fattori che possono influenzare l'efficienza e lo speed-up dell'architettura, come
-il deployment reale. Si possono quindi estendere gli indicatori considerando
-l'effetto generale dell'overhead, T0 (N ), che rappresenta le risorse e il tempo
-realmente utilizzato per la comunicazione (caso ideale di deployment):
-T0 (N ) = |T1 (N ) $-$ P · TP (N )|
-(9)
+In questi indicatori si è tuttavia lasciato da parte il problema dell'I/O, che spesso è il vero collo di bottiglia in
+diverse architetture. Inoltre, vi son diversi fattori che possono influenzare l'efficienza e lo speed-up
+dell'architettura, come il deployment reale. Si possono quindi estendere gli indicatori considerando l'effetto 
+generale dell'overhead, $T_0(N)$, che rappresenta le risorse e il tempo realmente utilizzato per la comunicazione 
+(caso ideale di deployment):
+\begin{equation}
+T_0(N) = \left|T_1(N) - P \cdot T_P(N)\right|
+\end{equation}
 Ma quindi, si ha che:
-T0 (N ) + T1 (N )
-P
+\begin{equation}
+ T_P(N) = \frac{T_0(N) + T_1(N)}{P}
+\end{equation}
 E si ha che che lo speed-up risulta essere:
-TP (N ) =
-SP (N ) =
-P · T1 (N )
-T0 (N ) + T1 (N )
-(10)
-(11)
+\begin{equation}
+ S_P(N) = \frac{P \cdot T_1(N)}{T_0(N) + T_1(N)}
+\end{equation}
 E che l'efficienza risulta essere:
-EP (N ) =
-1
-1+
-T0 (N )
-T1 (N )
-(12)
-Per cui l'efficienza non sembra dipendere dal numero dei processori. . . in realtà,
-è proprio T0 (N ) a dipendere dal numero dei processori : l'overhead dipende dal
-numero di processori impegnati.
-Supponiamo quindi di avere come obiettivo per l'architettura di mantenere
-costante l'efficienza:
-1
-E=
-1+
-E+E·
-T0 (N )
-T1 (N )
-T0 (N )
-=1
-T1 (N )
-1$-$E
-T0 (N )
-=
-T1 (N )
-E
-(1 $-$ E)
-T0 (N ) =
-· T1 (N )
-E
-T0 (N ) = K · T1 (N )
-Se K fosse veramente una costante, saremmo in isoefficienza. Un sistema isoefficiente indica che, se manteniamo costante
-la
-complessità e aumentiamo il
-numero dei processori, l'efficienza non varia. Il valore di K quindi determina se
-il sistema ha un buon comportamento. In particolare:
-$\bullet$ K piccolo: il sistema è altamente scalabile. Al crescere di K quindi la
-scalabilità del sistema decresce
-$\bullet$ Se non è costante ma funzione dei processori, allora il sistema non è
-scalabile.
+\begin{equation}
+E_P(N) = \frac{1}{1 + \frac{T_0(N)}{T_1(N)}}
+\end{equation}
+Per cui l'efficienza non sembra dipendere dal numero dei processori... in realtà,
+è proprio $T_0(N)$ a dipendere dal numero dei processori: l'overhead dipende dal numero di processori impegnati.
+Supponiamo quindi di avere come obiettivo per l'architettura di mantenere costante l'efficienza:
+\begin{align}
+                            E_P(N) &= \frac{1}{1 + \frac{T_0(N)}{T_1(N)}} \nonumber \\
+ E + E \cdot \frac{T_0(N)}{T_1(N)} &= 1                                   \nonumber \\
+             \frac{T_0(N)}{T_1(N)} &= \frac{1 - E}{E}                     \nonumber \\
+                            T_0(N) &= \frac{1 - E}{E} \cdot T_1(N)        \nonumber \\
+                            T_0(N) &= K \cdot T_1(N)
+\end{align}
+Se K fosse veramente una costante, saremmo in isoefficienza. Un sistema isoefficiente indica che, se manteniamo 
+costante la complessità e aumentiamo il numero dei processori, l'efficienza non varia. Il valore di K quindi determina
+se il sistema ha un buon comportamento. In particolare:
+\begin{itemize}
+ \item \textit{K piccolo}: il sistema è altamente scalabile. Al crescere di K quindi la scalabilità del sistema decresce
+ \item Se non è costante ma funzione dei processori, allora il sistema non è scalabile.
+\end{itemize}
 I sistemi reali sono scarsamente scalabili.
-16
 \subsection{Conclusioni}
 Un progetto deve essere valutato attentamente, per cercare di dimensionarlo in maniera corretta: nel caso di una
 macchina singola l'heavily loaded limit è un ragionamento corretto, ma bisogna ricordarsi che si deve sempre cercare di
