--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -35,7 +35,7 @@ gialle, ricercando servizi e non nomi!
 $\bullet$ Event e notification: sono sistemi meno orientati agli oggetti, ma che
 quindi aumentano le capacità del sistema! Infatti, oltre alla maniera sina
 crona/asincrona bloccante, in questo modo si possono introdurre sistemi
-molto più essibili.
+molto più flessibili.
 26 Tuttavia, CORBA resta solo una specifica: come debba essere fatto il deployment
 dell'ORB è in realtà a carico delle singole implementazioni
 27 Questo servizio per esempio è più potente del servizio di nomi dei WS, che è solo locale
